Fold the example back in, and log through SLF4J
Two things a consumer sees.

The example is a subproject
--------------------------
ADR-0021 made example/ a separate build so it would consume Goldberry through
published coordinates. The reasoning held; the cost did not. `./gradlew projects`
did not list it, IDEs did not import it, and `./gradlew run` failed with "task
'run' not found". Delegating from the root with an Exec task worked and left the
real problem in place: a directory in the repository that no tool considered part
of the project.

So `include ':example'`, `implementation project(':core')`, no second wrapper, no
dependency substitution. What ADR-0021 wanted is kept where a single build can
keep it -- the example is still a module, still runs on the module path, still
declares --enable-native-access=io.github.digitalsmile.goldberry.natives, and
those are the parts that catch real problems. What is lost is the check that the
published artifact is called goldberry-core rather than core; that now surfaces
at publishing time, and ADR-0023 says so.

Logging
-------
Every module logs through SLF4J and binds no implementation. slf4j-api is an api
dependency; no provider is a dependency of anything. Choosing one is the
application's call, and a library that ships a backend both takes that choice
away and picks a fight with whatever the application already uses.

Info is what belongs in a bug report -- which library loaded from where, which
SDL, a window opening, a scale change. Debug is the toolkit's own lifecycle.
Trace is per-frame. Error only where something was otherwise swallowed.

The requirement that an application configuring nothing sees NOTHING needed work.
SLF4J 2 prints "No SLF4J providers were found" to stderr on first use, which is
noise on the console of everyone who made a deliberate choice, and reads like a
complaint from Goldberry rather than from a library beneath it. Logs sets
slf4j.internal.verbosity=ERROR in a static initializer, and every 